--- a/assets/css/yii2-fancybox3.css
+++ b/assets/css/yii2-fancybox3.css
@@ -2,7 +2,7 @@
     outline: none;
 }
 .fancybox-slide {
-    overflow: hidden;
+    overflow-x: hidden;
 }
 .yii2-fancybox3-dialog {
     box-shadow: 0 7px 8px -4px rgba(0,0,0,.2), 0 13px 19px 2px rgba(0,0,0,.14), 0 5px 24px 4px rgba(0,0,0,.12);
